tests/ui/specialization/specialization-default-items-drop-coherence.next.stderr
error[E0119]: conflicting implementations of trait `Overlap` for type `u32`
  --> $DIR/specialization-default-items-drop-coherence.rs:29:1
   |
LL | impl Overlap for u32 {
   | -------------------- first implementation here
...
LL | impl Overlap for <u32 as Default>::Id {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `u32`

error[E0282]: type annotations needed
  --> $DIR/specialization-default-items-drop-coherence.rs:18:23
   |
LL |     default type Id = T;
   |                       ^ cannot infer type for associated type `<T as Default>::Id`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0282.
For more information about an error, try `rustc --explain E0119`.
